add endpoint for lis of user roles
